<resources>
    <string name="app_name">Zalo Pay</string>
    <string name="loremipsum"></string>
    <string name="action_settings">Settings</string>
    <string name="notification">Thông báo</string>
    <string name="overbalance">Số Dư</string>
    <string name="transfer.money">Chuyển Tiền</string>
    <string name="red.envelope">Lì Xì</string>
    <string name="scan.qr.code">Quét mã QR</string>
    <string name="receive.money">Nhận Tiền</string>
    <string name="bank.support.link.card">Ngân hàng hỗ trợ liên kết thẻ</string>
    <string name="link.card.bank.support.empty">Chưa có ngân hàng hỗ trợ liên kết thẻ</string>
    <string name="link.account.bank.support.empty">Chưa có ngân hàng hỗ trợ liên kết tài khoản</string>
    <string name="login_with_zalo">Đăng nhập với Zalo</string>
    <string name="appid">19240466928203470</string>
    <string name="zalo_appid">zalo-19240466928203470</string>
    <string name="amount">Số tiền</string>
    <string name="vnd"> VND</string>
    <string name="hint_amount">Số tiền (VND)</string>
    <string name="hint_message">Lời nhắn</string>
    <string name="btn_withdraw">Rút Tiền</string>
    <string name="btn_update">Cập Nhật</string>
    <string name="btn_continue">Tiếp Tục</string>
    <string name="btn_pay_now">Thanh Toán</string>
    <string name="btn_deposit">Nạp Tiền</string>
    <string name="btn_confirm">Xác Nhận</string>
    <string name="btn_cancel">Bỏ Qua</string>
    <string name="btn_start">Bắt Đầu</string>
    <string name="btn_exit">Thoát</string>
    <string name="btn_wait_loading">Đợi tải</string>
    <string name="btn_reload">Tải Lại</string>
    <string name="btn_turn_on_network">Bật Kết Nối</string>
    <string name="btn_send">Gửi</string>
    <string name="btn_link">Liên Kết</string>
    <string name="btn_cancel_transaction">Hủy Giao Dịch</string>
    <string name="btn_retry_select_bank">Chọn ngân hàng khác</string>
    <string name="txt_continue">Tiếp tục</string>
    <string name="txt_deposit">Nạp tiền</string>
    <string name="txt_withdraw">Rút tiền</string>
    <string name="txt_update">Cập nhật</string>
    <string name="txt_close">Đóng</string>
    <string name="txt_retry">Thử lại</string>
    <string name="txt_cancel">Bỏ qua</string>
    <string name="txt_warning">Cảnh báo</string>
    <string name="txt_later">Để sau</string>
    <string name="title_activity_balance_topup">Nạp tiền</string>
    <string name="title.activity.profile">Thông tin cá nhân</string>
    <string name="title_activity_qr_code">Quét mã QR để thanh toán</string>
    <string name="title.activity.transfer">Chuyển tiền</string>
    <string name="title.activity.transfer.to">Chuyển tiền đến</string>
    <string name="title.activity.zalopay.contact">Danh sách bạn bè</string>
    <string name="title.activity.change.pin">Tạo lại mật khẩu thanh toán</string>
    <string name="title.activity.invitation.code">Invitation Code</string>
    <string name="title.activity.withdraw.home">Số dư TK Zalo Pay</string>
    <string name="title.activity.withdraw">Rút tiền</string>
    <string name="title.activity.set.amount">Thiết lập số tiền</string>
    <string name="title.activity.update.account.name">Cập nhật Zalo Pay ID</string>
    <string name="title.activity.withdraw.condition">Điều kiện rút tiền</string>
    <string name="title.activity.my.qr">Nhận tiền</string>
    <string name="title.activity.tutorial.network.connection">Hướng dẫn kết nối mạng</string>
    <string name="title.activity.tutorial.link.card">Thông Báo</string>
    <string name="title.activity.warning.root">Cảnh báo</string>
    <string name="title.activity.protect.account">Thiết lập bảo vệ tài khoản</string>
    <string name="title.activity.feedback">Gửi báo lỗi</string>
    <string name="title.activity.request.support">Yêu cầu hỗ trợ</string>
    <string name="title.activity.choose.category">Phân loại</string>
    <string name="title_activity_link_bank">Ngân hàng</string>
    <string name="title.activity.search.category">Tìm kiếm</string>
    <string name="title.activity.bank.support.selection">Chọn liên kết</string>
    <string name="title.activity.sync.contact">Cập nhật danh bạ</string>
    <string name="label_qr_to_pay">Hướng camera vào mã QR để thanh toán</string>
    <string name="label_invitation_code">Nhập mã kích hoạt ứng dụng.\nĐể có mã kích hoạt, liên hệ hotro@zalopay.vn</string>
    <string name="txt_leftmenu_sigout">Đăng Xuất</string>
    <string name="txt_confirm_sigout">Bạn có muốn đăng xuất tài khoản này không?</string>
    <string name="free_fee">Miễn phí giao dịch</string>
    <string name="not_link_card">Bạn chưa liên kết thẻ</string>
    <string name="not_link_bank">Bạn chưa liên kết ngân hàng</string>
    <string name="link_card_to_use_easily">Liên kết thẻ để thanh toán các dịch vụ được dễ dàng và nhanh chóng.</string>
    <string name="not_link_account">Bạn chưa liên kết tài khoản</string>
    <string name="link_account_to_use_easily">Liên kết tài khoản ngân hàng để thanh toán các dịch vụ được dễ dàng và nhanh chóng.</string>
    <string name="secure_info">Bảo mật thông tin</string>
    <string name="secure_info_detail">Zalo Pay thực hiện theo Tiêu Chuẩn Bảo Mật PCI-DSS và không lưu thông tin thẻ của bạn.</string>
    <string name="link_card_title">Ngân hàng hỗ trợ</string>
    <string name="link_account_title">Ngân hàng hỗ trợ</string>
    <string name="txt_link_card_success">Liên kết thẻ thành công.</string>
    <string name="txt_link_card_fail">Liên kết thẻ thất bại.</string>
    <string name="txt_remove_link">Hủy Liên Kết</string>
    <string name="txt_remove_link_successfully">Hủy liên kết thành công</string>
    <string name="txt_confirm_remove_card">Bạn có muốn hủy thông tin thẻ đã liên kết này không?</string>
    <string name="txt_title_remove_card">Nhập mật khẩu để xác nhận hủy liên kết</string>
    <string name="txt_message_vcb_maintenace">Ngân hàng đang bảo trì. Vui lòng quay lại sau ít phút</string>
    <string name="txt_confirm_remove_account">Bạn có muốn hủy thông tin tài khoản đã liên kết này không?</string>
    <string name="txt_confirm_remove_vcb_account">Bạn cần đăng nhập tài khoản Vietcombank để hủy liên kết</string>
    <string name="tutorial_link_card_note_1">Thẻ vừa thanh toán đã được liên kết vào tài khoản Zalo Pay của bạn.</string>
    <string name="tutorial_link_card_note_2">Bạn có thể sử dụng thẻ này vào các lần thanh toán sau mà không cần nhập số thẻ.</string>
    <string name="tutorial_link_card_note_3">Zalo Pay thực hiện theo Tiêu Chuẩn Bảo Mật PCI-DSS và không lưu thông tin thẻ của bạn.</string>
    <string name="link_account_bank_support_hint">Để liên kết thành công TK Vietcombank và TK Zalo Pay phải sử dụng cùng 1 số điện thoại và tối thiểu 50.000 VND trong VCB</string>
    <string name="link_account_empty_bank_support_phone_require_hint">Để liên kết thành công, số điện thoại đăng ký TK Vietcombank phải là %s</string>
    <string name="link_account_empty_bank_support_balance_require_hint"><![CDATA[Để thanh toán thành công, số dư tối thiểu trong TK Vietcombank là <b>50.000 VND</b>]]></string>
    <string name="txt_home_bank">Ngân Hàng</string>
    <string name="txt_home_link_card">Liên Kết Thẻ</string>
    <string name="txt_home_link_account">Liên Kết Tài Khoản</string>
    <string name="txt_home_scantopay">Thanh Toán</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_notifications">Thông báo</string>
    <string name="title_min_money">Tối thiểu %s</string>
    <string name="min_money">Số tiền tối thiểu %s</string>
    <string name="max_money">Số tiền không được vượt quá %s</string>
    <string name="valid_money">Số tiền phải là bội số của 10.000 VND</string>
    <string name="input_money_text">Số khác</string>
    <string name="withdraw.inputmoney.hint">Tối thiểu từ %1$s và là bội số của %2$s</string>
    <string name="pressed_back_to_exit">Bấm Back một lần nữa để đóng ứng dụng</string>
    <string name="link.card.more">Thêm Liên Kết</string>
    <string name="link.card.now">Liên Kết Ngay</string>
    <string name="add">Thêm</string>
    <string name="link.card">Liên Kết Thẻ</string>
    <string name="link.account">Liên Kết Tài Khoản</string>
    <string name="link_acc_more">Thêm Liên Kết Tài Khoản</string>
    <string name="hint_phone">Số điện thoại</string>
    <string name="hint_email">Email</string>
    <string name="phone_support">1900 54 54 36</string>
    <string name="agree.term.of.use">Tôi đã đọc và đồng ý với %s của Zalo Pay</string>
    <string name="term.of.use">thỏa thuận sử dụng</string>
    <string name="pin_title">Tạo mật khẩu để thanh toán bằng số dư hoặc thẻ đã liên kết</string>
    <string name="invalid_pin">Nhập vào mật khẩu thanh toán 6 số</string>
    <string name="pin.not.change">Mật khẩu thanh toán mới và cũ phải khác nhau</string>
    <string name="manager_card">Xem Chi Tiết</string>
    <string name="personal">Cá nhân</string>
    <string name="user_info">Thông tin cá nhân</string>
    <string name="not_update">Chưa cập nhật</string>
    <string name="update_information">Cập nhật thông tin</string>
    <string name="waiting_approve">Đang chờ duyệt</string>
    <string name="cmnd_passpost">CMND/Hộ chiếu</string>
    <string name="zalopay_id">Mã định danh</string>
    <string name="title_activity_scan_to_pay">Trả tiền</string>
    <string name="show">Hiện</string>
    <string name="hide">Ẩn</string>
    <string name="hint_otp">Mã OTP</string>
    <string name="otp_note">Mã OTP được gửi qua SMS đến điện thoại của bạn</string>
    <string name="transfer.contact.list">Danh bạ</string>
    <string name="transfer.contact.list.content">Chuyển tiền cho bạn bè trong danh bạ</string>
    <string name="transfer_acc_zalopay">Bạn bè Zalo</string>
    <string name="transaction_recent">Giao dịch gần đây</string>
    <string name="hint_zalo_contact">Nhập tên hoặc số điện thoại</string>
    <string name="deposit">Nạp tiền vào tài khoản Zalo Pay</string>
    <string name="home_deposit">Nạp Tiền</string>
    <string name="you.have.unread.messages">Bạn có %s thông báo chưa đọc.</string>
    <string name="not_update_zalopay_id">Chưa cập nhật Zalo Pay ID</string>
    <string name="txt_input_userinfo">Cập nhật</string>
    <string name="txt_need_input_userinfo">Hãy cập nhật thông tin để sử dụng tính năng này</string>
    <string name="transfer_money_note">Bạn có thể dùng tính năng Chuyển tiền để trả tiền hoặc cho bạn bè vay tiền</string>
    <string name="update.profile2.success">Cập nhật thông tin thành công.</string>
    <string name="update.profile.success">Thông tin của bạn đã được gửi đi và đang chờ duyệt.</string>
    <string name="waiting.approve.email">Email của bạn đang chờ ban quản trị duyệt.</string>
    <string name="waiting.approve.identity">CMND/Hộ chiếu của bạn đang chờ ban quản trị duyệt.</string>
    <string name="accept">Đồng ý</string>
    <string name="cancel">Huỷ</string>
    <string name="txt_send_feedback">Vui lòng nhập thông tin để gửi đến bộ phận CSKH</string>
    <string name="email_to_feedback">Nhập email để nhận phản hồi (bắt buộc)</string>
    <string name="compulsory_email">Email (bắt buộc)</string>
    <string name="transaction_id">Mã giao dịch</string>
    <string name="describe_error">Mô tả</string>
    <string name="category">Phân loại</string>
    <string name="describe_request_support_count">Mô tả (%s/64) (bắt buộc)</string>
    <string name="describe_request_support">Nhập thông tin cần hỗ trợ (bắt buộc)</string>
    <string name="device_not_internet_connection">Không có kết nối mạng.\nHãy bật Wi-Fi hoặc 3G.</string>
    <string name="please_do_tutorial">Vui lòng làm theo hướng dẫn:</string>
    <string name="turn_on_wifi"><![CDATA[<b>Bật Wi-fi:</b> chọn <b>\"Settings\"</b> (cài đặt) - <b>\"Wi-fi\"</b> và chọn mạng Wi-fi có sẵn.]]></string>
    <string name="select_bank_to_link_account">Chọn ngân hàng để liên kết tài khoản:</string>
</resources>