<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="vn.com.vng.zalopay.ui.fragment.TutorialConnectInternetFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_snackbar"
        android:paddingBottom="@dimen/spacing.medium.l"
        android:paddingLeft="@dimen/spacing.medium"
        android:paddingRight="@dimen/spacing.medium"
        android:paddingTop="@dimen/spacing.medium.l"
        android:text="@string/device_not_internet_connection"
        android:textColor="@color/txt_title_check_internet"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/loremipsum"
        android:paddingBottom="21dp"
        android:paddingTop="45dp"
        android:src="@drawable/ic_nointernet" />

    <TextView
        style="@style/TextView.Group.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/spacing.small"
        android:paddingLeft="@dimen/spacing.medium"
        android:paddingRight="@dimen/spacing.medium"
        android:paddingTop="@dimen/spacing.large.t"
        android:text="@string/please_do_tutorial"
        android:textAllCaps="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTurnOnWifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/spacing.medium"
            android:paddingRight="@dimen/spacing.medium"
            android:paddingTop="@dimen/spacing.medium.l"
            android:textColor="@color/txt_content_check_internet"
            tools:text="@string/turn_on_wifi" />

        <TextView
            android:id="@+id/tvTurnOn3G"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/spacing.medium.l"
            android:paddingLeft="@dimen/spacing.medium"
            android:paddingRight="@dimen/spacing.medium"
            android:paddingTop="33dp"
            android:textColor="@color/txt_content_check_internet"
            tools:text="@string/turn_on_wifi" />
    </LinearLayout>
</LinearLayout>
