<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sweetDialogRootView"
    android:layout_width="@dimen/alert_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/zpw_padding_20"
        android:paddingLeft="@dimen/zpw_padding_24"
        android:paddingRight="@dimen/zpw_padding_24"
        android:paddingTop="@dimen/zpw_padding_15">

        <ImageView
            android:id="@+id/custom_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_information"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/content_text"
            style="@style/TextView.Default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="@dimen/spacing.medium"
            android:text="@string/select_bank_to_link_account"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/listBankRecyclerView"
            style="@style/RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadingEdge="none"
            android:overScrollMode="never"
            android:paddingTop="@dimen/spacing.medium"/>
    </LinearLayout>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"/>

    <TextView
        android:id="@+id/cancel_button"
        style="@style/dialog_blue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/spacing.medium"
        android:paddingTop="@dimen/spacing.medium.s"
        android:text="@string/txt_close"/>

</LinearLayout>